[package]
name = "mongo-derive"
version = "0.1.0"
authors = ["Alex Kornitzer <alex.kornitzer@countercept.com>"]
edition = "2018"
description = "An abstraction layer on mongodb"
documentation = "https://docs.rs/mongo"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "MIT"
repository = "https://github.com/countercept/mongo-rs"
readme = "../README.md"

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
mongo = { version = "0.1.0", path = "../mongo" }

[lib]
proc-macro = true
