[package]
name = "mongo"
version = "0.1.0"
authors = [
  "Alex Kornitzer <alex.kornitzer@countercept.com>",
]
edition = "2018"
description = "An abstraction layer on mongodb"
documentation = "https://docs.rs/mongo"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "MIT"
repository = "https://github.com/countercept/mongo-rs"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bson = { version = "1.1", features = ["u2i"] }
chrono = { version = "0.4", optional = true, features = ["serde"] }
futures = "0.3"
log = "0.4"
mongodb = "1.0"
mongo-derive = { version = "=0.1.0", optional = true, path = "../mongo-derive" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", default-features = false, features = ["stream"] }
url = "2.2"


[dev-dependencies]
mongo-derive = { version = "0.1.0", path = "../mongo-derive" }


[features]
default = []
blocking = ["tokio/rt-core", "tokio/sync"]
derive = ["mongo-derive"]
