[package]
name = "mongod-derive"
version = "0.1.1"
authors = ["Alex Kornitzer <alex.kornitzer@countercept.com>"]
edition = "2018"
description = "An abstraction layer on mongodb"
documentation = "https://docs.rs/mongo"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "MIT"
repository = "https://github.com/countercept/mongo-rs"
readme = "../README.md"

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
# FIXME: Require nesting until we can work out a way to do nested deriving
# cleanly...
#mongod = { version = "0.1.1", path = "../mongod" }
mongod = { version = "0.1.1", path = "../mongod", features = ["derive"] }

[lib]
proc-macro = true
