[package]
name = "mongod-derive"
version = "0.2.2"
authors = ["Alex Kornitzer <alex.kornitzer@countercept.com>"]
edition = "2018"
description = "An abstraction layer on mongodb"
documentation = "https://docs.rs/mongo"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "MIT"
repository = "https://github.com/countercept/mongo-rs"
readme = "../README.md"

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
mongod = { version = "0.2.2", path = "../mongod" }

[lib]
proc-macro = true
