[package]
name = "mongod"
version = "0.2.2"
authors = [
  "Alex Kornitzer <alex.kornitzer@countercept.com>",
]
edition = "2018"
description = "An abstraction layer on mongodb"
documentation = "https://docs.rs/mongo"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "MIT"
repository = "https://github.com/countercept/mongo-rs"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bson = { version = "2.0.0-beta.2", features = ["u2i"] }
chrono = { version = "0.4", optional = true, features = ["serde"] }
futures = "0.3"
log = "0.4"
mongodb = "2.0.0-beta.2"
mongod-derive = { version = "=0.2.2", optional = true, path = "../mongod-derive" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", default-features = false }
url = "2.2"


[dev-dependencies]
mongod-derive = { version = "0.2.2", path = "../mongod-derive" }


[features]
default = []
blocking = ["tokio/rt", "tokio/sync"]
derive = ["mongod-derive"]
