[package]
name = "mongod"
version = "0.3.3"
authors = [
  "Alex Kornitzer <alex.kornitzer@countercept.com>",
]
edition = "2018"
description = "An abstraction layer on mongodb"
documentation = "https://docs.rs/mongo"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "MIT"
repository = "https://github.com/countercept/mongo-rs"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bson = { version = "2.4", features = ["chrono-0_4", "uuid-0_8"] }
chrono = { version = "0.4", optional = true, features = ["serde"] }
futures = "0.3"
log = "0.4"
mongodb = "2.0.0-beta.3"
mongod-derive = { version = "=0.3.3", optional = true, path = "../mongod-derive" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", default-features = false }
url = "2.2"


[dev-dependencies]
mongod-derive = { version = "0.3.3", path = "../mongod-derive" }


[features]
default = []
blocking = ["tokio/rt", "tokio/sync"]
derive = ["mongod-derive"]
